# _oc-data_engineer_projet-6

./: .gitignore  Projet Seattle.pptx  Projet Seattle2.pptx  README  README.md  Untitled.ipynb  bentofile.yaml  grid_search.py  preprocess_data.py  pyproject.toml  save_model.py  service.py  template_modelistation_supervisee.ipynb
anticipez_les_besoins_en_consommation_de_bâtiments_huleux_jeremy/: Huleux_Jeremy_1_notebooks_012026.ipynb  Huleux_Jeremy_2_presentation_012026.pptx  Huleux_Jeremy_6_bentofile_012026.yaml
